--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ backend/.env.*
 backend/db.sqlite3
 backend/media/
 backend/staticfiles/
+*.pyc
 
 
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
@@ -64,3 +65,4 @@ frontend/testem.log
 *.swo
 .DS_Store
 Thumbs.db
+
