--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ databricks-sql-connector==4.2.4
 distro==1.9.0
 Django==6.0.1
 django-cors-headers==4.9.0
+django-environ==0.12.0
 djangorestframework==3.16.1
 et_xmlfile==2.0.0
 google-auth==2.48.0
